# CryptoUpdate

./: .dockerignore  .gitignore  0_Home.py  CLAUDE.md  DATABASE_RULES.md  Dockerfile  Dockerfile.cli  Exporter.py  README.md  SECURITY.md  Updater.py  app.py  archivesTools.py  clearArchive.py  cli.Dockerfile  cli_tools.py  code-review-report.md  compose.cli.yml  compose.yml  docker-compose.yml  draw.py  fixcsv_settimestamps.py  main.py  mydata.py  notebook.ipynb  processArchive.py  processArchives.py  processArchives_cli.py  pyproject.toml  requirements.in  requirements.txt  test.py  toSQLite.py  updateNotion_cli.py  walletVision.py  web.py
.github/: copilot-instructions.md
.github/instructions/: archon.instructions.md
.github/workflows/: pylint.yml
app_pages/: 0_Home.py  1_Portfolio.py  1_Portfolios.py  1_Wallets.py  2_Graphs.py  2_Import.py  2_Operations.py  2_Wallets.py  3_Import.py  3_Operations.py  3_Update.py  4_Import.py  4_Settings.py  4_Update.py  4_Wallets.py  5_Settings.py  5_TokenMetadata.py  5_Update.py  6_Settings.py  X_Tests.py
backend/backend/: settings.py  urls.py
backend/csvstore/: admin.py  apps.py  core.py  models.py  urls.py  views.py
backend/csvstore/migrations/: 0001_initial.py  0002_alter_csvstore_amount_invested_and_more.py  0003_csvstore_timestamp_add_alter_csvstore_timestamp.py  0004_remove_csvstore_timestamp_add.py  0005_alter_csvstore_timestamp.py  0006_alter_csvstore_timestamp.py
backend/csvstore/templates/: success.html  upload.html
mcp_postgres/: .env.example  Dockerfile  README.md  docker-compose.yml
mcp_postgres/init/: 01-init-database.sql  02-migrate-from-sqlite.sql
mcp_postgres/pgadmin/: servers.json
mcp_postgres/scripts/: backup.sh  restore.sh
mcp_sqlite/: Dockerfile.mcp  MCP-DOCKER-GUIDE.md  docker-compose.mcp.yml
modules/: Exporter.py  Notion.py  Updater.py  aiprocessing.py  cmc.py  configuration.py  configuration.py.tmp.8136.1765183653368  data.py  historybase.py  plotter.py  portfolio.py  portfolioini.py  portfolios.py  process.py  token_metadata.py  tools.py  utils.py  walletVision.py
modules/database/: apimarket.py  customdata.py  fiat_cache.py  historybase.py  market.py  migrations.py  operations.py  portfolios.py  swaps.py  tokensdb.py
notebooks/: 4kings.ipynb  GraphPlot.ipynb  countCoins.ipynb
pages/: 1_Wallets.py  2_Import.py  3_Update.py  4_Settings.py  import.py  update.py  wallets.py
