[project]
name = "cryptoupdate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alive-progress>=3.2.0",
    "anthropic>=0.42.0",
    "dash>=2.18.2",
    "filelock>=3.20.3",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pillow>=12.1.1",
    "plotly>=6.0.0",
    "protobuf>=6.33.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.6",
    "st-pages>=1.0.1",
    "streamlit>=1.42.0",
    "typer>=0.15.1",
    "tzlocal>=5.3",
    "urllib3>=2.6.3",
    "werkzeug>=3.1.5",
]

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "pylint>=3.3.8",
]

[tool.pylint.main]
ignore-paths = ["^\\.venv"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
# Nommage Streamlit : fichiers préfixés par un chiffre ou lettre (0_Home, X_Tests…)
module-rgx = "(([a-z_][a-z0-9_]*)|([0-9X][_a-zA-Z][_a-zA-Z0-9]*))"

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-lines",
    "too-many-return-statements",
    "broad-exception-caught",
    "logging-fstring-interpolation",
    "duplicate-code",
    "import-outside-toplevel",
    "redefined-outer-name",
    "no-else-return",
    "use-dict-literal",
]
